<?xml version="1.0"?>
<package format="2">
  <name>talon</name>
  <version>0.0.1</version>
  <description>The talon package</description>

  <maintainer email="abgoertz@uark.edu">abgoertz</maintainer>
  <license>BSD</license>
  <author email="abgoertz@uark.edu">Adam Goertz</author>


  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
